(processor) Bump upperJava to 18 and add it to know source versions